[package]
name = "pdf-extract"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Wimmer <mail@nwimmer.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
lopdf = "0.30.0"
winnow = "0.4.6"

